[metadata]
name = zhmc_prometheus_exporter
description = A prometheus.io exporter for metrics from the IBM Z HMC
description-file = README.rst
author = Jakob Naucke
author-email = jakob.naucke@ibm.com
license = Apache-2.0
home-page = https://github.com/zhmcclient/zhmc-prometheus-exporter

[files]
packages = zhmc_prometheus_exporter

[entry_points]
console_scripts =
    zhmc_prometheus_exporter = zhmc_prometheus_exporter.zhmc_prometheus_exporter:main
