[metadata]
name = zhmc_prometheus_exporter
summary = A prometheus.io exporter for metrics from the IBM Z HMC
description-file = README.rst
author = Jakob Naucke
author-email = jakob.naucke@ibm.com
license = Apache-2.0
home_page = https://github.com/zhmcclient/zhmc-prometheus-exporter
platforms = any
python_requires = >=3.4
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[files]
packages = zhmc_prometheus_exporter

[entry_points]
console_scripts =
    zhmc_prometheus_exporter = zhmc_prometheus_exporter.zhmc_prometheus_exporter:main
